<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>cr.ac.una</groupId>
    <artifactId>RestUNA</artifactId>
    <version>1.0</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.jfoenix</groupId>
            <artifactId>jfoenix</artifactId>
            <version>9.0.10</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>11.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>11.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>11.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.1.0</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>2.3</version>
        </dependency>
        
<!--        <dependency>
            <groupId>com.jfoenix</groupId>
            <artifactId>jfoenix</artifactId>
            <version>9.0.10</version>
        </dependency>-->
        
        
<!--     https://mvnrepository.com/artifact/org.controlsfx/controlsfx 
    <dependency>
        <groupId>org.controlsfx</groupId>
        <artifactId>controlsfx</artifactId>
        <version>11.1.0</version>
      <type>jar</type>
    </dependency>-->


<!--jasperreport-->
        <dependency>
            <groupId>net.sf.jasperreports</groupId>
            <artifactId>jasperreports</artifactId>
            <version>6.17.0</version>
            <type>jar</type>
        </dependency>
        
        <!--WEB SERVICES REST-->
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
            <version>3.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.core</groupId>
            <artifactId>jersey-client</artifactId>
            <version>3.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.inject</groupId>
            <artifactId>jersey-hk2</artifactId>
            <version>3.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.media</groupId>
            <artifactId>jersey-media-json-binding</artifactId>
            <version>3.0.2</version>
        </dependency>
        <!--WEB SERVICES REST-->
        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>jakarta.mail</artifactId>
            <version>2.0.1</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>jakarta.mail</artifactId>
            <version>1.6.4</version>
            <exclusions>
                <exclusion>
                    <groupId>javax.activation</groupId>
                    <artifactId>activation</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.sun.activation</groupId>
            <artifactId>jakarta.activation</artifactId>
            <version>2.0.0</version>
        </dependency>
        <dependency>
            <groupId>javax.activation</groupId>
            <artifactId>javax.activation-api</artifactId>
            <version>1.2.0</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.6</version>
                <configuration>
                    <options>
                        <option>--add-exports=javafx.controls/com.jfoenix.controls.pannable=com.jfoenix</option>
                        <option>--add-exports=javafx.fxml/com.jfoenix.controls.pannable=com.jfoenix</option>
                        <option>--add-exports=com.jfoenix/com.jfoenix.controls.pannable=javafx.fxml</option>

                        <option>--add-exports=jakarta.activation/com.sun.activation.registries=ALL-UNNAMED</option>
                        <option>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
                        <option>--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
                        <option>--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix</option>
                        <option>--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
                        <option>--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix</option>
                        <option>--add-opens=java.base/java.lang.reflect=com.jfoenix</option>
                        <option>--add-opens=javafx.base/javafx.beans.binding=ALL-UNNAMED</option>
                        <option>--add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls</option>

                        <option>--add-modules=javafx.swing</option> 
                    </options>
                    <mainClass>cr.ac.una.restuna.App</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <!-- Default configuration for running -->
                        <!-- Usage: mvn clean javafx:run -->
                        <id>default-cli</id>
                    </execution>
                    <execution>
                        <!-- Configuration for manual attach debugging -->
                        <!-- Usage: mvn clean javafx:run@debug -->
                        <id>debug</id>
                        <configuration>
                            <options>
                                <option>--add-exports=javafx.controls/com.jfoenix.controls.pannable=com.jfoenix</option>
                                <option>--add-exports=javafx.fxml/com.jfoenix.controls.pannable=com.jfoenix</option>
                                <option>--add-exports=com.jfoenix/com.jfoenix.controls.pannable=javafx.fxml</option>

                                <option>--add-exports=jakarta.activation/com.sun.activation.registries=ALL-UNNAMED</option>
                                <option>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
                                <option>--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
                                <option>--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix</option>
                                <option>--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
                                <option>--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix</option>
                                <option>--add-opens=java.base/java.lang.reflect=com.jfoenix</option>
                                <option>--add-opens=javafx.base/javafx.beans.binding=ALL-UNNAMED</option>
                                <option>--add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls</option>  
                                <option>--add-modules=javafx.swing</option> 
                                <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:8000</option>
                            </options>
                        </configuration>
                    </execution>
                    <execution>
                        <!-- Configuration for automatic IDE debugging -->
                        <id>ide-debug</id>
                        <configuration>
                            <options>
                                <option>--add-exports=javafx.controls/com.jfoenix.controls.pannable=com.jfoenix</option>
                                <option>--add-exports=javafx.fxml/com.jfoenix.controls.pannable=com.jfoenix</option>
                                <option>--add-exports=com.jfoenix/com.jfoenix.controls.pannable=javafx.fxml</option>

                                <option>--add-exports=jakarta.activation/com.sun.activation.registries=ALL-UNNAMED</option>
                                <option>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
                                <option>--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
                                <option>--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix</option>
                                <option>--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
                                <option>--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix</option>
                                <option>--add-opens=java.base/java.lang.reflect=com.jfoenix</option>
                                <option>--add-opens=javafx.base/com.sun.javafx.beans.binding=ALL-UNNAMED</option>  
                                <option>--add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls</option> 
                                <option>--add-modules=javafx.swing</option> 
                                <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
                            </options>
                        </configuration>
                    </execution>
                    <execution>
                        <!-- Configuration for automatic IDE profiling -->
                        <id>ide-profile</id>
                        <configuration>
                            <options>
                                <option>${profiler.jvmargs.arg1}</option>
                                <option>${profiler.jvmargs.arg2}</option>
                                <option>${profiler.jvmargs.arg3}</option>
                                <option>${profiler.jvmargs.arg4}</option>
                                <option>${profiler.jvmargs.arg5}</option>
                            </options>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
